# ellipse-detector-cmed

./: .gitignore  CMakeLists.txt  CNEllipseDetector.cpp  ComputePerformance_all_Lu.m  LICENSE  Makefile  README.md  check_overlap1.m  common.h  ellipse_detector  stdafx.h
.github/workflows/: build-and-test.yml
evaluation/: ComputePerformance_all_Lu.m  cmed_evaluator.py  ellipse_evaluator.cpp  ellipse_overlap_calculator.py  requirements.txt  test_evaluation.py
sources/: CNEllipseDetector.cpp  CNEllipseDetector.h  Main.cpp  common.cpp  compatibility.h  dirent.h  stdafx.h  tools.cpp  tools.h
